prometheus/templates/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
 name: prometheus-canary
spec:
 selector:
   app: prometheus
 ports:
   - protocol: "TCP"
     port: 3000
     targetPort: 3000
 type: LoadBalancer
