prometheus/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # - host: argocd.niveussolutions.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  name: http
# kind: Ingress
# metadata:
#   name: prometheus
#   annotations:
#     kubernetes.io/ingress.class: nginx
# spec:
#   rules:
#   - host: prometheus
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: prometheus
#             port:
#               number: 3000
